# trawe7-exporter

./: .gitignore  README.md  app.py  package-lock.json  package.json  pyproject.toml
controller/: app_controller.py
logic/: audio_analyzer.py  audio_processor.py  cut_flags.py  file_utils.py
resources/: lang.py
scripts/: gen_icons.py
services/: __init__.py  capabilities.py  ffmpeg_service.py  player_service.py  session.py  settings.py  waveform_service.py  worker.py
src/: audioAnalyzer.js  audioProcessor.js  fileManager.js  index.js
tests/: test_audio_analyzer.py  test_audio_processor.py  test_cut_flags.py  test_ffmpeg_service.py  test_file_utils.py  test_settings.py
ui/: icons.py  main_window.py  rtl.py  styles.py  waveform_view.py
